src/assets/scss/pages/Browse.scss
.browse {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    &-text {
        text-align: center;
        font-size: 1.2rem;
        margin: 0;
    }

    &-link {
        color: black;
    }

    &-container {
        max-width: 1400px;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
    }
}

